--- a/index.html
+++ b/index.html
@@ -208,19 +208,6 @@ cur.filters.alpha.opacity=50}
 </body>
 </html>
 
-<template id="page5">
-    <h2>
-      Первое Задание
-    </h2>
-    <figure>
-      <video controls id="task1-video">
-        <source src="video/task1/video.mp4" type="video/mp4" />
-      </video>
-    </figure>
-    <p>
-    </p>
-</template>
-
 <template id="page0">
     <h2>
       HTML ШКОЛА
@@ -263,10 +250,51 @@ cur.filters.alpha.opacity=50}
     </p>
 </template>
 
+<template id="page5">
+    <h2>
+      Первое Задание
+    </h2>
+    <figure>
+      <video controls id="task1-video">
+        <source src="video/task1/video.mp4" type="video/mp4" />
+      </video>
+    </figure>
+    <p>
+    </p>
+</template>
+
 <script>
-  const page0 = document.querySelector('#page0');
-  const pageContent = document.querySelector('.page-content');
-  pageContent.append(page0.content);
+  const left = document.querySelector('.weed-border-left');
+  const right = document.querySelector('.weed-border-right');
+
+  left.addEventListener('click', () => {
+      prevPage();
+  });
+
+  right.addEventListener('click', () => {
+      nextPage();
+  });
+
+  let currentPage = 0;
+
+  const nextPage = () => {
+      currentPage++;
+      showCurrentPage();
+  };
+
+  const prevPage = () => {
+      currentPage--;
+      showCurrentPage();
+  };
+
+  const showCurrentPage = () => {
+      const page = document.querySelector('#page' + currentPage);
+      const pageContent = document.querySelector('.page-content');
+      pageContent.innerHTML = '';
+      pageContent.append(page.cloneNode(true).content);
+  };
+
+  showCurrentPage();
 
   const showTimer = (time) => {
       const h2 = document.querySelector('h2');
