--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ cur.filters.alpha.opacity=50}
 
 <template id="page1">
     <h2>
-      NAPALEON
+      ПРЕПОД
     </h2>
     <figure>
       <img src="img/napaleon.webp" />
@@ -238,7 +238,16 @@ cur.filters.alpha.opacity=50}
 
 <template id="page2">
     <h2>
-      Димончик
+      УЧЕНИКИ
+    </h2>
+    <figure>
+      <img src="img/students.jpg" />
+    </figure>
+</template>
+
+<template id="page3">
+    <h2>
+      ДИМОНЧИК
     </h2>
     <figure>
       <img src="img/dimon4ik.jpg" />
@@ -250,7 +259,108 @@ cur.filters.alpha.opacity=50}
     </p>
 </template>
 
+<template id="page4">
+    <h2>
+      TONY
+    </h2>
+    <figure>
+      <img src="img/tony.jpg" />
+      <figcaption>
+        НАПИСАЛ СИСТЕМУ УЧЕТА АВТОПАРКА В ЭКСЕЛЕ
+      </figcaption>
+    </figure>
+    <p>
+    </p>
+</template>
+
 <template id="page5">
+    <h2>
+      JOHNNY
+    </h2>
+    <figure>
+      <img src="img/johnny.jpg" />
+      <figcaption>
+        ПОЧИНИЛ НОУТБУК ПРОСТО РАЗОБРАВ И СОБРАВ ЕГО
+      </figcaption>
+    </figure>
+    <p>
+    </p>
+</template>
+
+<template id="page6">
+    <h2>
+      KERTIS
+    </h2>
+    <figure>
+      <img src="img/kertis.jpg" />
+      <figcaption>
+        ПО СЛУХАМ ТРАХАЛ СИСТЕМНЫЙ БЛОК
+      </figcaption>
+    </figure>
+    <p>
+    </p>
+</template>
+
+<template id="page7">
+    <h2>
+      МОТИВАЦИЯ
+    </h2>
+    <figure>
+      <img src="img/salaries-with-experience.png" />
+      <figcaption>
+        РОСТ ЗП С ОПЫТОМ РАБОТЫ
+      </figcaption>
+    </figure>
+    <p>
+    </p>
+</template>
+
+<template id="page8">
+    <h2>
+      МОТИВАЦИЯ
+    </h2>
+    <figure>
+      <img src="img/it-cloud.png" />
+      <figcaption>
+        ТВОРЧЕСТВО, СОЗДАНИЕ ХУЙНИ
+      </figcaption>
+    </figure>
+</template>
+
+<template id="page9">
+    <h2>
+      НА ОСТРИЕ РАЗВИТИЯ
+    </h2>
+    <figure>
+      <img src="img/future.jpeg" />
+      <figcaption>
+        БУДУЩЕЕ ЗА ЭТИМ ДЕРЬМОМ - ДРОНЫ, ХУЕНЫ
+      </figcaption>
+    </figure>
+</template>
+
+<template id="page10">
+    <h2>
+      БАБКИ МИРА В ЭТОЙ СФЕРЕ
+    </h2>
+    <figure>
+      <img src="img/marketcap.png" />
+    </figure>
+</template>
+
+<template id="page11">
+    <h2>
+      ВХОД
+    </h2>
+    <figure>
+      <img src="img/junior-positions.png" />
+      <figcaption>
+        ВАКАНСИИ БЕЗ ОПЫТА РАБОТЫ ЕСТЬ
+      </figcaption>
+    </figure>
+</template>
+
+<template id="page12">
     <h2>
       Первое Задание
     </h2>
