--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ cur.filters.alpha.opacity=50}
       nextPage();
   });
 
-  let currentPage = 0;
+  let currentPage = parseInt(window.location.hash.replace('#', '')) || 0;
 
   const nextPage = () => {
       currentPage++;
@@ -402,6 +402,7 @@ cur.filters.alpha.opacity=50}
       const pageContent = document.querySelector('.page-content');
       pageContent.innerHTML = '';
       pageContent.append(page.cloneNode(true).content);
+      window.history.pushState('#page' + currentPage, 'page ' + currentPage, '#' + currentPage);
   };
 
   showCurrentPage();
