Add expectations form

--- a/index.html
+++ b/index.html
@@ -133,42 +133,20 @@ cur.filters.alpha.opacity=50}
     height: 100%;
   }
 
+  .expectations-form {
+    padding: 2em 5em;
+  }
+  
+  .expectations-form input {
+    font-size: 1em;
+    width: 100%;
+  }
+  .expectations-form label {
+    font-size: 2em;
+  }
+
 </style>
 
-
-
-<SCRIPT language=JavaScript>
-  if (document.images) {       
-  // êàðòèíêè ïîñëå íàâåäåíèÿ êóðñîðà     
-  img1on = new Image();		
-  img1on.src = "img/Over1.gif"; 
-  img2on = new Image();		
-  img2on.src = "img/Over2.gif"; 
-  img3on = new Image();		
-  img3on.src = "img/Over3.gif"; 
-  img4on = new Image();		
-  img4on.src = "img/Over4.gif"; 
-  img5on = new Image();		
-  img5on.src = "img/Over5.gif"; 
-  // êàðòèíêè ïîñëå îòâåäåíèÿ êóðñîðà
-  img1off = new Image();		  	
-  img1off.src = "img/Out1.gif"; 
-  img2off = new Image();		  	
-  img2off.src = "img/Out2.gif"; 
-  img3off = new Image();		  	
-  img3off.src = "img/Out3.gif"; 
-  img4off = new Image();		  	
-  img4off.src = "img/Out4.gif"; 
-  img5off = new Image();		  	
-  img5off.src = "img/Out5.gif"; 
-  }
-  function imgOn(imgName) {
-  if (document.images) {
-  document[imgName].src = eval(imgName + "on.src");        }}
-  function imgOff(imgName) {
-  if (document.images) {
-  document[imgName].src = eval(imgName + "off.src");        }}
-</SCRIPT>
 </head>
 
 
@@ -350,7 +328,7 @@ cur.filters.alpha.opacity=50}
 
 <template id="page11">
     <h2>
-      ВХОД
+      ВАЙТИ В АЙТИ
     </h2>
     <figure>
       <img src="img/junior-positions.png" />
@@ -358,6 +336,65 @@ cur.filters.alpha.opacity=50}
         ВАКАНСИИ БЕЗ ОПЫТА РАБОТЫ ЕСТЬ
       </figcaption>
     </figure>
+</template>
+
+<template id="page12">
+    <h2>
+      ЧТО ДЛЯ ЭТОГО НУЖНО
+    </h2>
+    <figure>
+      <img src="img/dro4ka.jpeg" />
+      <figcaption>
+        ЗАДРОТСВО
+      </figcaption>
+    </figure>
+</template>
+
+<template id="page13">
+    <h2>
+      ЧТО ДЛЯ ЭТОГО НУЖНО
+    </h2>
+    <figure>
+      <img src="img/dro4ka.jpeg" />
+      <figcaption>
+        ЗАДРОТСВО
+      </figcaption>
+    </figure>
+</template>
+
+<template id="page14">
+    <h2>
+      ДРОЧКА
+    </h2>
+    <figure>
+      <img src="img/courses.png" />
+    </figure>
+</template>
+
+<template id="page15">
+    <h2>
+      НАСКОЛЬКО ЭТО СЛОЖНО?
+    </h2>
+    <p class="expectations-form">
+      <label>TONY
+        <input type="text" />
+      </label>
+      <br />
+      <br />
+      <label>KERTIS
+        <input type="text" />
+      </label>
+      <br />
+      <br />
+      <label>JOHNNY
+        <input type="text" />
+      </label>
+      <br />
+      <br />
+      <label>MORPHEM
+        <input type="text" />
+      </label>
+    </p>
 </template>
 
 <template id="page12">
