Add memes about c++

--- a/index.html
+++ b/index.html
@@ -385,6 +385,24 @@ cur.filters.alpha.opacity=50}
 
 <template id="page15">
     <h2>
+      ДРОЧКА
+    </h2>
+    <figure>
+      <img src="img/cplusplus.jpg" />
+    </figure>
+</template>
+
+<template id="page16">
+    <h2>
+      ДРОЧКА
+    </h2>
+    <figure>
+      <img src="img/cplusplus-2.jpg" />
+    </figure>
+</template>
+
+<template id="page17">
+    <h2>
       НАСКОЛЬКО ЭТО СЛОЖНО?
     </h2>
     <p class="expectations-form">
@@ -409,7 +427,7 @@ cur.filters.alpha.opacity=50}
     </p>
 </template>
 
-<template id="page16">
+<template id="page18">
     <h2>
       Первое Задание
     </h2>
