--- a/index.html
+++ b/index.html
@@ -3,15 +3,6 @@
 <meta charset="utf-8" />
 <title>Weed</title>
 
-<script language="JavaScript1.2">
-function makevisible(cur,which){
-if (which==0){
-cur.filters.alpha.opacity=100
-}else{
-cur.filters.alpha.opacity=50}
-}
-</script>
-
 <style type="text/css">
   html, body {
     overflow: hidden;
@@ -172,6 +163,14 @@ cur.filters.alpha.opacity=50}
     line-height: 1.5;
     font-family: sans-serif;
     letter-spacing: 2px;
+  }
+
+  .rules p {
+    font-size: 1.5em;
+    padding: 0 0.5em;
+    font-family: sans-serif;
+    letter-spacing: 2px;
+
   }
 
 </style>
@@ -449,6 +448,42 @@ cur.filters.alpha.opacity=50}
 </template>
 
 <template id="page18">
+  <div class="rules">
+    <h2>
+      ПРАВЕЛА
+    </h2>
+
+    <p>
+      За каждый вопрос - банка.
+    </p>
+
+    <p>
+      За каждый ответ - банка.
+    </p>
+
+    <p>
+      Если вопросов нет - банка учителю.
+    </p>
+
+    <p>
+      Любое присуждение банки может быть оспорено общим голосованием.
+    </p>
+
+    <p>
+      В любой момент можно поднять голосование на штраф в 1 банку - по согласию всех учасников.
+    </p>
+
+    <p>
+      Право Вето: Ванчик, Димончик.
+    </p>
+
+    <p>
+      <a href="/rating.html">Rating page</a>
+    </p>
+  </div>
+</template>
+
+<template id="page19">
     <h2>
       Первое Задание
     </h2>
@@ -461,7 +496,7 @@ cur.filters.alpha.opacity=50}
     </p>
 </template>
 
-<template id="page19">
+<template id="page20">
     <h2>
       HTML КОД
     </h2>
@@ -472,7 +507,7 @@ cur.filters.alpha.opacity=50}
     </p>
 </template>
 
-<template id="page20">
+<template id="page21">
     <h2>
       КОРТИНКЕ
     </h2>
@@ -483,7 +518,7 @@ cur.filters.alpha.opacity=50}
     </p>
 </template>
 
-<template id="page21">
+<template id="page22">
     <h2>
       В ПЗДУ ПРГРМИРВОНЕ
     </h2>
@@ -494,7 +529,7 @@ cur.filters.alpha.opacity=50}
     </p>
 </template>
 
-<template id="page22">
+<template id="page23">
     <h2>
       W3Schools
     </h2>
@@ -505,7 +540,7 @@ cur.filters.alpha.opacity=50}
     </p>
 </template>
 
-<template id="page23">
+<template id="page24">
   <div class="expectation-reality">
     <h2>
       Expectation / Reality
@@ -530,7 +565,7 @@ cur.filters.alpha.opacity=50}
     </p>
 </template>
 
-<template id="page24">
+<template id="page25">
     <h2>
       Javascript
     </h2>
@@ -541,7 +576,7 @@ cur.filters.alpha.opacity=50}
     </p>
 </template>
 
-<template id="page25">
+<template id="page26">
     <h2>
       Select
     </h2>
@@ -552,7 +587,7 @@ cur.filters.alpha.opacity=50}
     </p>
 </template>
 
-<template id="page26">
+<template id="page27">
     <h2>
       Events
     </h2>
@@ -563,7 +598,7 @@ cur.filters.alpha.opacity=50}
     </p>
 </template>
 
-<template id="page27">
+<template id="page28">
     <h2>
       В ПЛАВАНИЕ
     </h2>
