Add myself to the rating xD

--- a/rating.html
+++ b/rating.html
@@ -54,6 +54,9 @@
 
 <body>
     <div class="participant">
+      <img src="img/napaleon.webp" />
+    </div>
+    <div class="participant">
       <img src="img/johnny.jpg" />
     </div>
     <div class="participant">
