Add avatars to skills tree

--- a/skills.html
+++ b/skills.html
@@ -26,5 +26,11 @@
     <text x="110" y="150" font-size="20">
       &lt;img&gt;
     </text>
+    <image href="img/kertis.jpg" height="200" width="200"/>
+    <image href="img/johnny.jpg" height="200" width="200" x="200" />
+    <image href="img/tony.jpg" height="200" width="200" x="400" />
+    <image href="img/napaleon.webp" height="200" width="200"x="600" />
+    <image href="img/dimon4ik.jpg" height="200" width="200"x="800" />
   </g>
+  <path d="M100 100 V -150 H 50 Z"></path>
 </svg>
