--- a/skills.html
+++ b/skills.html
@@ -14,6 +14,11 @@
     font-family: monospace;
   }
 
+  svg path {
+    stroke: black;
+    stroke-width: 2px;
+  }
+
   svg rect {
     fill: pink;
   }
@@ -26,10 +31,11 @@
 
 <script>
   const width = 200;
+  const height = 200;
   const padding = 50;
 
   const avatar = ({ x, href }) => `
-       <image href="${href}" height="200" width="${width}" x="${x}" />`;
+ <image href="${href}" height="${height}" width="${width}" x="${x}" />`;
 
   const avatars = `
     <g>
@@ -39,17 +45,17 @@
          ${avatar({ x: 4 * padding + 600, href: "img/dimon4ik.jpg" })}
     </g>`;
 
+  const skillBoxSize = 100;
 
   const svg = `
 <svg>
   <g id="img-tag">
-    <rect x="100" y="100" width="100" height="100"></rect>
+    <rect x="100" y="100" width="${skillBoxSize}" height="${skillBoxSize}"></rect>
     <text x="110" y="150" font-size="20">
       &lt;img&gt;
     </text>
-    ${avatars}
   </g>
-  <path d="M100 100 V -150 H 50 Z"></path>
+   <path d="M150 200 l ${0} ${skillBoxSize}"></path>
 </svg>
  `;
 
