Make 2 connected boxes :)

--- a/skills.html
+++ b/skills.html
@@ -55,7 +55,13 @@
       &lt;img&gt;
     </text>
   </g>
-   <path d="M150 200 l ${0} ${skillBoxSize}"></path>
+  <path d="M150 200 l ${0} ${skillBoxSize}"></path>
+  <g id="h1-tag">
+    <rect x="100" y="300" width="${skillBoxSize}" height="${skillBoxSize}"></rect>
+    <text x="110" y="350" font-size="20">
+      &lt;h1&gt;
+    </text>
+  </g>
 </svg>
  `;
 
