Generate skills line programmatically :)

--- a/skills.html
+++ b/skills.html
@@ -47,7 +47,7 @@
 
   const skillBoxSize = 100;
 
-  const skill = ({ text, x, y }) => {
+  const Skill = ({ text, x, y }) => {
     return `
      <rect x="${x}" y="${y}" width="${skillBoxSize}" height="${skillBoxSize}"></rect>
      <text x="${x + 10}" y="${y + 50}" font-size="20">
@@ -56,32 +56,32 @@
    `;
   };
 
-  const skillsLine = (skills) => skills.map(skill => `
-     ${skill(skill.text)};
-     ${path()};
+  const skills = [
+    { text: '<h1>' },
+    { text: '<p>' },
+    { text: '<img>' },
+    { text: '<a>' },
+  ];
+
+  const Path = ({x, y}) => `
+     <path d="M${x} ${y} l ${0} ${skillBoxSize}"></path>
+   `;
+
+  const skillsLine = (skills) => skills.map((skill, idx) => `
+     ${Skill({
+         text: skill.text,
+         x: 100,
+         y: idx * 200,
+     })}
+     ${Path({
+       x: 150,
+       y: 100 + idx * 200,
+     })};
   `);
 
   const svg = `
 <svg>
-  <g id="img-tag">
-   ${skill({
-       text: '<img>',
-       x: 100,
-       y: 100,
-   })}
-  </g>
-  <path d="M150 200 l ${0} ${skillBoxSize}"></path>
-  <g id="h1-tag">
-   ${skill({
-       text: '<h2>',
-       x: 100,
-       y: 500,
-   })}
-    <rect x="100" y="300" width="${skillBoxSize}" height="${skillBoxSize}"></rect>
-    <text x="110" y="350" font-size="20">
-      &lt;h1&gt;
-    </text>
-  </g>
+  ${skillsLine(skills)}
 </svg>
  `;
 
