Add texture to the skills

--- a/skills.html
+++ b/skills.html
@@ -7,9 +7,8 @@
   }
 
   svg text {
-    fill: black;
-    color: black;
-    stroke: black;
+    stroke: white;
+    fill: white;
     letter-spacing: 5px;
     font-family: monospace;
   }
