Change color for learned skills

--- a/skills.html
+++ b/skills.html
@@ -23,6 +23,18 @@
     fill: pink;
   }
 
+  svg g.skill {
+    
+  }
+
+
+  [class^=level-] {
+    filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
+  }
+
+  svg image.level-0 {
+    filter: none;
+  }
 </style>
 
 <body>
