Add more lesson 2 slides

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
     margin: 0;
   }
 
+  .page-content p {
+    padding: 1em;
+  }
+
   .page-content figure {
     text-align: center;
     margin: 0;
@@ -155,6 +159,7 @@
   }
 
   .expectation-reality {
+    padding: 0;
     text-align: center;
     font-size: 1.25em;
   }
@@ -659,6 +664,105 @@
         <div>5: УВЕЛИЧИТЬ РАЗМЕР ТЕКСТА ПАРАГРАФА : <br /> <span class="tag" style="margin-left: 2em">&lt;style&gt; p { font-size: 50px } &lt;/style&gt;</span></div>
       </div>
     </figure>
+</template>
+
+<template id="lesson2-page2">
+    <h2>
+      УРОК №2: ССЫЛКЕ
+    </h2>
+    <p>
+      <code>
+        &lt;a href="page2.html"&gt; <br>
+        &nbsp;&nbsp;Ссылке
+        <br>
+        &lt;/a&gt;
+      </code>
+    </p>
+</template>
+
+<template id="lesson2-page3">
+    <h2>
+      ВИДЕО
+    </h2>
+    <figure>
+      <img src="img/html-video.png" />
+    </figure>
+</template>
+
+<template id="lesson2-page4">
+    <h2>
+      ВИДЕО
+    </h2>
+    <figure>
+      <img src="img/html-video-code.png" />
+    </figure>
+</template>
+
+<template id="lesson2-page4">
+    <h2>
+      ВИДЕО
+    </h2>
+    <figure>
+      <img src="img/html-video-code.png" />
+    </figure>
+</template>
+
+<template id="lesson2-page5">
+    <h2>
+      СИТНАКСИС
+    </h2>
+    <figure>
+      <img src="img/html-structure.png" />
+    </figure>
+</template>
+
+<template id="lesson2-page6">
+    <h2>
+      СИТНАКСИС
+    </h2>
+    <figure>
+      <img src="img/html-structure-2.png" />
+    </figure>
+</template>
+
+<template id="lesson2-page7">
+    <h2>
+      CSS Box model
+    </h2>
+    <figure>
+      <img src="img/css-box-model.png" />
+    </figure>
+</template>
+
+<template id="lesson2-page8">
+    <h2>
+      СИТНАКСИС CSS
+    </h2>
+    <figure>
+      <img src="img/css-syntax.png" />
+    </figure>
+</template>
+
+
+
+<template id="lesson2-page9">
+  <div class="expectation-reality">
+    <h2>
+      Expectation / Reality
+    </h2>
+    <h3>Expectation</h3>
+    <div id="expecation">
+    </div>
+
+    <h3>Reality</h3>
+    <div id="reality">
+      <ul>
+        <li>Tony: <input type="text" /></li>
+        <li>Kertis: <input type="text" /></li>
+        <li>Johnny: <input type="text" /></li>
+        <li>Morphem: <input type="text" /></li>
+     </ul>
+    </div>
 </template>
 
 <script>
