Add Diablo background :)

--- a/skills.html
+++ b/skills.html
@@ -6,6 +6,11 @@
     padding: 0;
   }
 
+  body {
+    background: url('img/diablo-background.jpeg');
+    background-size: contain;
+  }
+
   svg text {
     stroke: white;
     fill: white;
