Render tree structure 1 line :)

--- a/skills.html
+++ b/skills.html
@@ -21,8 +21,9 @@
   }
 
   svg path {
-    stroke: black;
-    stroke-width: 2px;
+    stroke: #f6f1cc;
+    stroke-width: 4px;
+    fill: #fbecab;
   }
 
   svg rect {
