Make background cover body :)

--- a/skills.html
+++ b/skills.html
@@ -8,7 +8,7 @@
 
   body {
     background: url('img/diablo-background.jpeg');
-    background-size: contain;
+    background-size: cover;
   }
 
   svg text {
