Calculate svg height

--- a/skills.html
+++ b/skills.html
@@ -1,6 +1,5 @@
 <style>
   html, body, svg {
-    height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -8,7 +7,9 @@
 
   body {
     background: url('img/diablo-background.jpeg');
-    background-size: cover;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-color: black;
   }
 
   svg text {
