--- a/skills.html
+++ b/skills.html
@@ -44,9 +44,20 @@
     opacity: 0;
   }
 
+  .level-0 {
+    filter: invert(1) sepia(1) saturate(1) hue-rotate(175deg);
+  }
 
-  [class^=level-] {
+  .level-1 {
+    filter: invert(1) sepia(1) saturate(3) hue-rotate(175deg);
+  }
+
+  .level-2 {
     filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
+  }
+
+  .level-3 {
+    filter: invert(1) sepia(1) saturate(7) hue-rotate(175deg);
   }
 
   svg image.level-0 {
@@ -55,14 +66,6 @@
 
   .johnny, .tony {
     transition: all 2s ease-out;
-  }
-
-  .johnny {
-    filter: invert(1) sepia(1) saturate(5) hue-rotate(135deg);
-  }
-
-  .tony {
-    filter: invert(1) sepia(1) saturate(5) hue-rotate(90deg);
   }
 
   .avatar {
