--- a/skills.html
+++ b/skills.html
@@ -44,20 +44,17 @@
     opacity: 0;
   }
 
-  .level-0 {
-    filter: invert(1) sepia(1) saturate(1) hue-rotate(175deg);
-  }
-
   .level-1 {
-    filter: invert(1) sepia(1) saturate(3) hue-rotate(175deg);
+    filter: invert(1) sepia(1) saturate(3) hue-rotate(320deg);
   }
 
   .level-2 {
-    filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
+    filter: invert(1) sepia(1) saturate(5) hue-rotate(322deg);
   }
 
   .level-3 {
-    filter: invert(1) sepia(1) saturate(7) hue-rotate(175deg);
+    opacity: 1;
+    filter: invert(1) sepia(1) saturate(7) hue-rotate(326deg);
   }
 
   svg image.level-0 {
