Compute and display category level :)

--- a/skills.html
+++ b/skills.html
@@ -57,6 +57,18 @@
     filter: invert(1) sepia(1) saturate(7) hue-rotate(326deg);
   }
 
+  .category {
+    filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
+  }
+
+  .category-text {
+    stroke: black;
+    fill: black;
+    font-weight: bold;
+    font-family: monospace;
+    font-size: 2em;
+  }
+
   svg image.level-0 {
     filter: none;
   }
@@ -72,6 +84,10 @@
 
   .avatar.hide {
     opacity: 0;
+  }
+
+  circle.level {
+    fill: black;
   }
 
 </style>
