Add working links with students :)

--- a/skills.html
+++ b/skills.html
@@ -93,6 +93,11 @@
 </style>
 
 <body>
+  <header>
+    <a href="#tony">Tony</a>
+    <a href="#johnny">Johnny</a>
+    <a href="#dimon">Dimon</a>
+  </header>
   <section></section>
 </body>
 
