Make badges same color as skill

--- a/skills.html
+++ b/skills.html
@@ -50,6 +50,7 @@
 
   .level-2 {
     filter: invert(1) sepia(1) saturate(5) hue-rotate(322deg);
+    fill: #ff8244;
   }
 
   .level-3 {
@@ -57,7 +58,12 @@
     filter: invert(1) sepia(1) saturate(7) hue-rotate(326deg);
   }
 
-  .category {
+  .badge-rect {
+    stroke-width: 2px;
+    stroke: black;
+  }
+
+  .category-img, .category image {
     filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
   }
 
