WIP: show student level with proress bar

--- a/skills.html
+++ b/skills.html
@@ -66,6 +66,11 @@
     opacity: 0.8;
   }
 
+  .student-level {
+    filter: invert(1) sepia(1) saturate(5) hue-rotate(105deg);
+    background: none;
+  }
+
   .category-img, .category image {
     filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
   }
