Make student level prettier

--- a/skills.html
+++ b/skills.html
@@ -66,9 +66,30 @@
     opacity: 0.8;
   }
 
-  .student-level {
-    filter: invert(1) sepia(1) saturate(5) hue-rotate(105deg);
-    background: none;
+  .student-level image {
+    filter: invert(1) sepia(1) saturate(5) hue-rotate(200deg);
+  }
+
+  .student-level .badge-text {
+    fill: white;
+    stroke: white;
+    font-size: 2em;
+  }
+
+  .student-level-text {
+    fill: white;
+    stroke: white;
+    font-size: 1.5em;
+  }
+  
+  .student-level image {
+    filter: invert(1) sepia(1) saturate(5) hue-rotate(200deg);
+  }
+
+  .student-level-path {
+    fill: transparent;
+    stroke: #83d3ff;
+    stroke: white;
   }
 
   .category-img, .category image {
