Show student points (exp)

--- a/skills.html
+++ b/skills.html
@@ -92,6 +92,12 @@
     stroke: white;
   }
 
+  .exp-text {
+    font-size: 0.9rem;
+    fill: white;
+    stroke: white;
+  }
+
   .category-img, .category image {
     filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
   }
