--- a/skills.html
+++ b/skills.html
@@ -34,12 +34,6 @@
     
   }
 
-  svg .avatar {
-    opacity: 0.5;
-    border-radius: 50%;
-    overflow: hidden;
-  }
-
   svg #rect {
     opacity: 0;
   }
@@ -122,9 +116,25 @@
     transition: all 1s ease-out;
   }
 
+  @keyframes avatar {
+    0% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 1;
+    }
+  }
+
   .avatar {
-    opacity: 1;
+    border-radius: 50%;
+    overflow: hidden;
+    opacity: 0.5;
     transition: all 1s ease-out;
+  }
+
+  .avatar:not(.hide) {
+    animation: avatar 5s infinite alternate linear;
   }
 
   .avatar.hide {
