Make level even more pretty :)

--- a/skills.html
+++ b/skills.html
@@ -68,12 +68,15 @@
     fill: white;
     stroke: white;
     font-size: 2em;
+    stroke: black;
+    stroke-width: 1px;
+    font-weight: bold;
   }
 
   .student-level-text {
     fill: white;
-    stroke: white;
     font-size: 1.5em;
+    font-weight: bold;
   }
   
   .student-level image {
@@ -87,9 +90,11 @@
   }
 
   .exp-text {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     fill: white;
     stroke: white;
+    font-weight: normal;
+    font-family: sans-serif;
   }
 
   .category-img, .category image {
