Use background img for ship

--- a/game/game.html
+++ b/game/game.html
@@ -2,12 +2,13 @@
   body {
     background: #202026;
   }
-  img {
+  #ship {
     width: 600px;
     height: 600px;
-    object-fit: none;
-    object-position: -20px -10px;
+    background: url('ship.gif');
+    background-position: -20px -10px;
+    transform: scale(0.5);
   }
 </style>
-<img src="ship.gif" />
+<div id="ship" />
 <script src="game.js"></script>
