--- a/game/game.html
+++ b/game/game.html
@@ -2,13 +2,50 @@
   body {
     background: #202026;
   }
-  #ship {
+
+  #ship-translator {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  #ship-rotator {
+    width: 300px;
+    height: 300px;
+    transform: rotate(90deg);
+    transform-origin: center;
+  }
+
+  #ship-rotator.left {
+    transform: rotate(90deg);
+  }
+
+  #ship-rotator.up {
+    transform: rotate(180deg);
+  }
+
+  #ship-rotator.right {
+    transform: rotate(270deg);
+  }
+
+  #ship-rotator.down {
+    transform: rotate(0deg);
+  }
+
+  #ship-image {
     width: 600px;
     height: 600px;
     background: url('ship.gif');
     background-position: -20px -10px;
     transform: scale(0.5);
+    transform-origin: left top;
   }
 </style>
-<div id="ship" />
+
+<div id="ship-translator">
+  <div id="ship-rotator" class="up">
+    <div id="ship-image" />
+  </div>
+</div>
+
 <script src="game.js"></script>
